Bloody pipes/vbars..

--- a/website/index.html
+++ b/website/index.html
@@ -61,7 +61,7 @@ require 'memcache'
 require 'instantcache'
 class Foo
   include InstantCache
-  memcached_accessor(InstantCache::SHARED, :sharedvar) { |vname| "shared-#{vname}" }
+  memcached_accessor(InstantCache::SHARED, :sharedvar)
 end
 
 InstantCache.cache_object = MemCache.new('127.0.0.1:11211')
@@ -86,7 +86,7 @@ f.sharedvar &lt;&lt; 23
   require 'instantcache'
   class Foo
     include InstantCache
-    memcached_accessor(InstantCache::SHARED, :sharedvar)
+    memcached_accessor(InstantCache::SHARED, :sharedvar) { &#124;vname&#124; "shared-#{vname}" }
   end
   &nbsp;
   InstantCache.cache_object = MemCache.new('127.0.0.1:11211')
